fix styling alignment on item list that has no item images

--- a/screens-with-parts/selection-list/selection-list-screen.component.scss
+++ b/screens-with-parts/selection-list/selection-list-screen.component.scss
@@ -13,6 +13,7 @@
 
 .item-card-image {
     height: 275px;
+    margin-right:10px;
 }
 
 .item-title {
